# Rpc

./: .gitignore  Cargo.toml
nodejs/: package-lock.json  package.json  rpc_client.js  varint.js
python/: Makefile  __init__.py  cbor_encoding.py  json_encoding.py  server.py  transport.py
rpc/: Cargo.toml
rpc/examples/: test_lock_debug.rs  test_log_errors.rs
rpc/src/: async_duplex.rs  error.rs  from_serialize.rs  generic_value.rs  handler.rs  handshake.rs  lib.rs  macros.rs  otel.rs
rpc/src/async_simplex/: broker.rs  broker_builder.rs  broker_client.rs  client.rs  client_builder.rs  client_connection.rs  connector.rs  init.rs  messages.rs  mod.rs  protocol.rs  server.rs  server_builder.rs  server_connection.rs  stream_wrapper.rs  test.rs
rpc/src/msg_stream/: cbor.rs  json.rs  mod.rs  protocol.rs  split.rs  stream.rs  test.rs  varint.rs  wrapper.rs
rpc/src/tls/: config.rs  mod.rs  test.rs  tls_stream_ext.rs
rpc/tests/: broker.rs.bak  service.rs  service_client_server.rs  session.rs  shutdown.rs
rpc/tests/certs/: create-test-agent.sh  create-test-backend.sh  create-test-broker.sh  create-test-ca.sh  create-test-certificates.sh
rpc_derive/: Cargo.toml
rpc_derive/src/: attributes.rs  case_conversion.rs  input.rs  javascript.rs  lib.rs  protocol.rs  python.rs  request.rs  rpc.rs  service.rs  stub.rs
