[package]
name = "rpc"
description = "An rpc library for Rust"
version = "0.1.37"
authors = ["Maarten Deprez <mdp@continuousc.eu>"]
repository = "https://github.com/ContinuousC/Rpc.git"
license = "Elastic-2.0"
edition = "2021"
publish = false

[features]
default = ["serde_json", "serde_cbor"]
opentelemetry = ["dep:opentelemetry", "dep:tracing-opentelemetry", "tracing"]
tracing = ["dep:tracing", "dep:cpu-time", "rpc_derive/tracing"]

[dependencies]
tokio = { version = "1.0", features = [
    "io-util",
    "rt",
    "macros",
    "net",
    "sync",
    "time",
    "fs",
] }
tokio-stream = { version = "0.1.8", features = ["net"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
nom = "7.1"
serde_json = { version = "1.0", optional = true }
serde_cbor = { version = "0.11", optional = true }
futures = "0.3.19"
tokio-rustls = "0.26"
rustls = "0.23"
rustls-pemfile = "2.0"
x509-parser = "0.16"
log = "0.4.17"
parking_lot = "0.12.1"
opentelemetry = { version = "0.27", optional = true }
tracing-opentelemetry = { version = "0.28", optional = true }
tracing = { version = "0.1.40", optional = true }
cpu-time = { version = "1.0.0", optional = true }
schemars = { version = "0.8.21", optional = true }
bincode = { version = "1.3.3", optional = true }

rpc_derive = { version = "0.1.22" }

[dev-dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread"] }
lock_debug = { version = "0.1.4" }
simplelog = "0.12"
rand = "0.8.4"
env_logger = "0.10.0"
